// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner renders 1`] = `
<div
  className="sc-hXCwRK kXJPgF"
>
  <div
    className="sc-cJbhSk dripqA"
  >
    <div
      className="sc-dGHkRN hpTTCC"
    >
      <div
        className="sc-zmges bmBLis"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-leXBFf csHLhw"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-lccgLh kNIhgl"
  />
</div>
`;

exports[`Banner renders in mobile mode 1`] = `
<div
  className="sc-hXCwRK bGBNce"
>
  <div
    className="sc-cJbhSk dripqA"
  >
    <div
      className="sc-dGHkRN hpTTCC"
    >
      <div
        className="sc-zmges bmBLis"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-leXBFf csHLhw"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-lccgLh kNIhgl"
  >
    <span>
      <button
        className="sc-buvPDS frOzkA"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Discard
        <div
          className="sc-bkzQlO bysHDj"
        />
      </button>
    </span>
    <span>
      <button
        className="sc-buvPDS dCZdHv"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Confirm
        <div
          className="sc-bkzQlO bysHDj"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`Banner renders in single line mode 1`] = `
<div
  className="sc-hXCwRK kXJPgF"
>
  <div
    className="sc-cJbhSk jGksUB"
  >
    <div
      className="sc-leXBFf hzmrbO"
    >
      Your email is not verified. Verify to enable withdrawals.
    </div>
    <div
      className="sc-lccgLh kNIhgl"
    >
      <button
        className="sc-buvPDS hmNFa-D"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Resend verification link to email ›
        <div
          className="sc-bkzQlO bysHDj"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Banner renders with buttons 1`] = `
<div
  className="sc-hXCwRK dXdJNP"
>
  <div
    className="sc-cJbhSk dripqA"
  >
    <div
      className="sc-dGHkRN hpTTCC"
    >
      <div
        className="sc-zmges bmBLis"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-leXBFf csHLhw"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-lccgLh kNIhgl"
  >
    <span>
      <button
        className="sc-buvPDS frOzkA"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Discard
        <div
          className="sc-bkzQlO bysHDj"
        />
      </button>
    </span>
    <span>
      <button
        className="sc-buvPDS dCZdHv"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Confirm
        <div
          className="sc-bkzQlO bysHDj"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`Banner renders with buttons RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="sc-hXCwRK dXdJNP"
  >
    <div
      className="sc-cJbhSk dripqA"
    >
      <div
        className="sc-dGHkRN hpTTCC"
      >
        <div
          className="sc-zmges bmBLis"
        >
          Title here
        </div>
      </div>
      <div
        className="sc-leXBFf csHLhw"
      >
        Lorem ipsum dolor...
      </div>
    </div>
    <div
      className="sc-lccgLh kNIhgl"
    >
      <span>
        <button
          className="sc-buvPDS frOzkA"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Discard
          <div
            className="sc-bkzQlO bysHDj"
          />
        </button>
      </span>
      <span>
        <button
          className="sc-buvPDS dCZdHv"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Confirm
          <div
            className="sc-bkzQlO bysHDj"
          />
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Banner renders with header icon 1`] = `
<div
  className="sc-hXCwRK kXJPgF"
>
  <div
    className="sc-cJbhSk dripqA"
  >
    <div
      className="sc-dGHkRN hpTTCC"
    >
      <div
        className="sc-zmges bmBLis"
      >
        Title here
      </div>
      <div
        className="sc-erUUZj hTvcEA"
      >
        <svg
          className="sc-cfxfcM"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
    <div
      className="sc-leXBFf csHLhw"
    >
      Lorem ipsum dolor...
    </div>
  </div>
</div>
`;
